# web-scraper-plugin

./: LICENSE  README.md  pyproject.toml
scraper/: __init__.py  cli.py  config.py
scraper/core/: exceptions.py  fetcher.py  limiter.py  retry.py  runner.py  types.py
scraper/pipeline/: transforms.py  validators.py
scraper/plugins/: __init__.py  base.py  quotes.py  registry.py
scraper/storage/: base.py  jsonl.py
tests/: test_registry.py  test_retry.py  test_runner.py
