[project]
name = "plugin-web-scraper"
version = "0.1.0"
description = "Plugin-based, testable web scraping framework (sync-first)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "selectolax>=0.3.21",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
scrape = "scraper.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
