[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-web-scraper"
version = "0.1.0"
description = "A small, testable web scraping framework built around explicit plugins and clean boundaries."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["scraping", "plugins", "httpx", "cli", "architecture"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0",
  "selectolax>=0.3.21",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/theodoros-mangas/web-scraper-plugin"
Repository = "https://github.com/theodoros-mangas/web-scraper-plugin"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
scrape = "scraper.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
